edit headquarter
